--- a/src/ClasesInternas/UpdateProducts.form
+++ b/src/ClasesInternas/UpdateProducts.form
@@ -40,34 +40,49 @@
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="57" pref="57" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="ProductoIdlbl" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="ProductoNombrelbl" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="ProductoPreciolbl" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="ProductoStocklbl" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="ProductoCategorialbl" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="ProductoNuevobtn" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                                  <Component id="ProductoNuevobtn" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="ProductoIdtxt" max="32767" attributes="0"/>
-                              <Component id="ProductoNombretxt" max="32767" attributes="0"/>
-                              <Component id="ProductoPreciotxt" max="32767" attributes="0"/>
-                              <Component id="ProductoStocktxt" max="32767" attributes="0"/>
-                              <Component id="ProductoCategoriacmbx" pref="168" max="32767" attributes="0"/>
-                              <Component id="ProductoActualizarbtn" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="ProductoIdtxt" max="32767" attributes="0"/>
+                                      <Component id="ProductoNombretxt" max="32767" attributes="0"/>
+                                      <Component id="ProductoPreciotxt" max="32767" attributes="0"/>
+                                      <Component id="ProductoStocktxt" max="32767" attributes="0"/>
+                                      <Component id="ProductoCategoriacmbx" pref="168" max="32767" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                                  <Component id="ProductoActualizarbtn" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="Titulolbl" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jScrollPane1" pref="482" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="625" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
+                  <Component id="Eliminarbtn" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -76,8 +91,8 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane1" min="-2" pref="379" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
+                      <Component id="jScrollPane1" alignment="0" min="-2" pref="379" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
                           <Component id="Titulolbl" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -104,14 +119,16 @@
                               <Component id="ProductoCategorialbl" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                               <Component id="ProductoCategoriacmbx" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="ProductoNuevobtn" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                              <Component id="ProductoActualizarbtn" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="Eliminarbtn" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="ProductoNuevobtn" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
-                      <Component id="ProductoActualizarbtn" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
+                  <EmptySpace pref="16" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -120,9 +137,9 @@
         <Component class="javax.swing.JLabel" name="Titulolbl">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="24" style="0"/>
+              <Font name="Tahoma" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Actualizar Productos"/>
+            <Property name="text" type="java.lang.String" value="Administraci&#xf3;n de Productos"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="ProductoIdlbl">
@@ -267,6 +284,20 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ProductoActualizarbtnActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="Eliminarbtn">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/Imagenes/del.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Eliminar"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EliminarbtnActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
