--- a/src/Main/CashierLogin.form
+++ b/src/Main/CashierLogin.form
@@ -136,7 +136,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="b1" green="71" red="39" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="CashierID:"/>
+            <Property name="text" type="java.lang.String" value="Correo:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="CashierPassLBL">
